src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail26.jova
class Test{

     public int method1(){
        int x;
        return 0;
     }

    public int method2(){
         int x;
         return 0;
    }

    public bool func(){
        String x;
        int x;
        return false;
    }

    public bool func(String x,int x){
        return false;
    }

}

